--- a/his-story.html
+++ b/his-story.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Forg3t</title>
+    <title>4bidden Prod His-Story</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -227,23 +227,25 @@
                     <div class="left-images">
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1 FORG3T SMALL.webp" alt="Left Image 1" />
+                                <img src="images/2 HIS-STORY SMALL.webp" alt="Left Image 1" />
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1.2 FORG3T LOGO BLACK small.webp" alt="Left Image 2" />
+                                <img src="images/2.1 HIS-STORY LOGO SMALL.webp" alt="Left Image 2" />
                             </a>
                         </span>
                     </div>
                     <div class="right-text">
-                        <h3>FORG3T</h3>
-                        <h2>They said 'Never Forget' for two towers but hope you forget the third—WTC7. Start asking. Start with Building 7.</h2>
+                        <h3>HIS-STORY</h3>
+                        <h2>The "Research Your-Story, Not His-Story" design centers around a striking black-and-white depiction of the Palace of Fine Arts in San Francisco—a structure steeped in grandeur and mystery. However, the image is a deliberate fabrication, highlighting the sinister manipulation of history. Whether crafted through early photo-editing techniques or staged on an elaborate movie set, this depiction embodies the extraordinary lengths taken to distort the truth. The upside-down swan symbolizes a corrupted purity, serving as a visual metaphor for truth obscured by lies. This design demands scrutiny and sparks conversation, inviting the viewer to seek their own truths.
+
+                          "History is a set of lies agreed upon." – Napoleon Bonaparte</h2>
                     </div>
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div class="products-container"><div id='collection-component-1739210069296'></div>
+            <div class="products-container"><div id='collection-component-1739287693359'></div>
             <script type="text/javascript">
             /*<![CDATA[*/
             (function () {
@@ -271,8 +273,8 @@
                 });
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('collection', {
-                    id: '668686745974',
-                    node: document.getElementById('collection-component-1739210069296'),
+                    id: '668686713206',
+                    node: document.getElementById('collection-component-1739287693359'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
               "product": {
