--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@
         <!--All Designs Subsubmenu -->
         <ul id="subsubmenu-all-designs" class="submenu">
             <li><button class="back-button" data-target="submenu-clothes">Back</button></li>
-            <li><a href="collection-4biddenprod-nada.html">4BiddenProd NADA Limited Edition</a></li>
             <li><a href="design-4biddenprod-nada.html">4BiddenProd NADA Limited Edition</a></li>
             <li><a href="bluebeam-iq-test.html">Bluebeam IQ Test</a></li>
             <li><a href="forg3t.html">Forg3t</a></li>
@@ -172,12 +171,7 @@
         <img src="images/slide1.jpg" alt="Slide 3" loading="lazy" />
       </div>
 
-      <!-- Dots -->
-      <div class="dots-container" role="tablist">
-        <button class="dot" data-slide="0" role="tab" aria-label="Slide 1" aria-selected="true"></button>
-        <button class="dot" data-slide="1" role="tab" aria-label="Slide 2" aria-selected="false"></button>
-        <button class="dot" data-slide="2" role="tab" aria-label="Slide 3" aria-selected="false"></button>
-      </div>
+      
     </div>
 
     <!-- Second Slider -->
@@ -192,12 +186,7 @@
         <img src="images/slide3.jpg" alt="Slide 3" loading="lazy" />
       </div>
 
-      <!-- Dots -->
-      <div class="dots-container" role="tablist">
-        <button class="dot" data-slide="0" role="tab" aria-label="Slide 1" aria-selected="true"></button>
-        <button class="dot" data-slide="1" role="tab" aria-label="Slide 2" aria-selected="false"></button>
-        <button class="dot" data-slide="2" role="tab" aria-label="Slide 3" aria-selected="false"></button>
-      </div>
+      
     </div>
 
               <!DOCTYPE html>
@@ -228,61 +217,61 @@
                     <div class="cslider-slides">
                         <!-- Slide 1 -->
                         <div class="cslider-slide">
-                            <a href="#new-arrivals">
+                            <a href="new-arrivals.html">
                                 <img src="images/6.webp" alt="New Arrivals Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">105 products</span>
+                                    <span class="cslider-products">137 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 2 -->
                         <div class="cslider-slide">
-                            <a href="#mens-classic">
+                            <a href="mens-classics.html">
                                 <img src="images/7.webp" alt="Men's Classic Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">43 products</span>
+                                    <span class="cslider-products">51 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 3 -->
                         <div class="cslider-slide">
-                            <a href="#womens-tshirts">
+                            <a href="womens-tshirts.html">
                                 <img src="images/8.webp" alt="Women's T-Shirts Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">20 products</span>
+                                    <span class="cslider-products">22 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 4 -->
                         <div class="cslider-slide">
-                            <a href="#backprint-tshirts">
-                                <img src="images/9.webp" alt="Backprint T-Shirts Collection">
+                            <a href="backprint-tshirts.html">
+                                <img src="images/11.webp" alt="Backprint T-Shirts Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">11 products</span>
+                                    <span class="cslider-products">13 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 5 -->
                         <div class="cslider-slide">
-                            <a href="#pullover-hoodies">
-                                <img src="images/10.webp" alt="Pullover Hoodies Collection">
+                            <a href="pullover-hoodies.html">
+                                <img src="images/9.webp" alt="Pullover Hoodies Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">11 products</span>
+                                    <span class="cslider-products">35 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 6 -->
                         <div class="cslider-slide">
-                            <a href="#cropped-hoodies">
-                                <img src="images/11.webp" alt="Cropped Hoodies Collection">
+                            <a href="cropped-hoodies.html">
+                                <img src="images/10.webp" alt="Cropped Hoodies Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">11 products</span>
+                                    <span class="cslider-products">12 products</span>
                                 </div>
                             </a>
                         </div>
@@ -317,10 +306,10 @@
       <span class="image">
         <img src="images/1 FORG3T SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Magna</h2>
+      <a href="forg3t.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+          <h2>View</h2>
         </div>
       </a>
     </article>
@@ -328,130 +317,124 @@
       <span class="image">
         <img src="images/1.1 FORG3T LOGO SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Lorem</h2>
+      <a href="forg3t.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-        </div>
+          <h2>View</h2>
+         </div>
       </a>
     </article>
     <article class="style3">
       <span class="image">
-        <img src="images/pic03.jpg" alt="" />
+        <img src="images/2 HIS-STORY SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Feugiat</h2>
+      <a href="his-story.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-        </div>
+          <h2>View</h2>
+         </div>
       </a>
     </article>
     <article class="style4">
       <span class="image">
-        <img src="images/pic04.jpg" alt="" />
+        <img src="images/2.1 HIS-STORY LOGO SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Tempus</h2>
+      <a href="his-story.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-        </div>
+          <h2>View</h2>
+         </div>
       </a>
     </article>
     <article class="style5">
       <span class="image">
-        <img src="images/pic05.jpg" alt="" />
+        <img src="images/5 INDOCTRINATION SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Aliquam</h2>
+      <a href="indoctrination.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+          <h2>View</h2>
         </div>
       </a>
     </article>
     <article class="style6">
       <span class="image">
-        <img src="images/pic06.jpg" alt="" />
+        <img src="images/5 INDOCTRINATION LOGO SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Veroeros</h2>
+      <a href="indoctrination.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+          <h2>View</h2>
         </div>
       </a>
     </article>
     <article class="style2">
       <span class="image">
-        <img src="images/pic07.jpg" alt="" />
+        <img src="images/6 PROPAGANDA SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Ipsum</h2>
+      <a href="propaganda-missile.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+          <h2>View</h2>
         </div>
       </a>
     </article>
     <article class="style3">
       <span class="image">
-        <img src="images/pic08.jpg" alt="" />
+        <img src="images/6.1 PROPAGANDA LOGO SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Dolor</h2>
+      <a href="propaganda-missile.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+          <h2>View</h2>
         </div>
       </a>
     </article>
     <article class="style1">
       <span class="image">
-        <img src="images/pic09.jpg" alt="" />
+        <img src="images/4BIDDENPROD NADA SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Nullam</h2>
+      <a href="design-4biddenprod-nada.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+          <h2>View</h2>
         </div>
       </a>
     </article>
     <article class="style5">
       <span class="image">
-        <img src="images/pic10.jpg" alt="" />
+        <img src="images/4BIDDENPROD NADA LOGO SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Ultricies</h2>
+      <a href="design-4biddenprod-nada.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-        </div>
+          <h2>View</h2>
+         </div>
       </a>
     </article>
     <article class="style6">
       <span class="image">
-        <img src="images/pic11.jpg" alt="" />
+        <img src="images/11 THEY-LIE-VISION SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Dictum</h2>
+      <a href="they-lie-vision.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-        </div>
+          <h2>View</h2>
+         </div>
       </a>
     </article>
     <article class="style4">
       <span class="image">
-        <img src="images/pic12.jpg" alt="" />
+        <img src="images/4biddenprod logo black SMALL SMALL.webp" alt="" />
       </span>
-      <a href="generic.html">
-        <h2>Pretium</h2>
+      <a href="they-lie-vision.html">
+        <h2></h2>
         <div class="content">
-          <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-        </div>
+          <h2>View</h2>
+         </div>
       </a>
     </article>
   </section>
-
-      <!-- Repositioned "View All" Button -->
-      <div style="display: flex; justify-content: center; margin-top: 20px;">
-        <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Designs</button>
-      </div>
-    </div>
 
      <div class="divider"></div>
      <div class="divider"></div>
