--- a/indoctrination.html
+++ b/indoctrination.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Forg3t</title>
+    <title>4bidden Prod Indoctrination</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -227,23 +227,23 @@
                     <div class="left-images">
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1 FORG3T SMALL.webp" alt="Left Image 1" />
+                                <img src="images/5 INDOCTRINATION SMALL.webp" alt="Left Image 1" />
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1.2 FORG3T LOGO BLACK small.webp" alt="Left Image 2" />
+                                <img src="images/5 INDOCTRINATION LOGO SMALL.webp" alt="Left Image 2" />
                             </a>
                         </span>
                     </div>
                     <div class="right-text">
-                        <h3>FORG3T</h3>
-                        <h2>They said 'Never Forget' for two towers but hope you forget the third—WTC7. Start asking. Start with Building 7.</h2>
+                        <h3>Indoctrination, Start'em Young</h3>
+                        <h2>Discover the stark reality of early indoctrination with "Indoctrination, Start'em Young" from our Manufactured Minds collection. This powerful design depicts three children, mesmerized and motionless, as they gaze at a television emitting the sinister light of an all-seeing eye. This image serves as a chilling emblem of how young minds are targeted for control, molding them into conformity from an early age.</h2>
                     </div>
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div class="products-container"><div id='collection-component-1739210069296'></div>
+            <div class="products-container"><div id='collection-component-1739295707162'></div>
             <script type="text/javascript">
             /*<![CDATA[*/
             (function () {
@@ -271,8 +271,8 @@
                 });
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('collection', {
-                    id: '668686745974',
-                    node: document.getElementById('collection-component-1739210069296'),
+                    id: '668685631862',
+                    node: document.getElementById('collection-component-1739295707162'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
               "product": {
