--- a/they-lie-news-network.html
+++ b/they-lie-news-network.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Forg3t</title>
+    <title>4bidden Prod They Lie News Network</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -227,23 +227,23 @@
                     <div class="left-images">
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1 FORG3T SMALL.webp" alt="Left Image 1" />
+                                <img src="images/14 TLNN SMALL.webp" alt="Left Image 1" />
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1.2 FORG3T LOGO BLACK small.webp" alt="Left Image 2" />
+                                <img src="images/4biddenprod logo black SMALL SMALL.webp" alt="Left Image 2" />
                             </a>
                         </span>
                     </div>
                     <div class="right-text">
-                        <h3>FORG3T</h3>
-                        <h2>They said 'Never Forget' for two towers but hope you forget the third—WTC7. Start asking. Start with Building 7.</h2>
+                        <h3>They Lie News Network</h3>
+                        <h2>The "TLNN (They Lie News Network)" design boldly unveils the media's true face—a sinister alien masquerading as human, manipulating the masses from behind the scenes. Drawing inspiration from the iconic film They Live, this graphic features a stark red and white TLNN logo, paired with the chilling motto "OBEY OR STARVE."</h2>
                     </div>
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div class="products-container"><div id='collection-component-1739210069296'></div>
+            <div class="products-container"><div id='collection-component-1739295327198'></div>
             <script type="text/javascript">
             /*<![CDATA[*/
             (function () {
@@ -271,8 +271,8 @@
                 });
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('collection', {
-                    id: '668686745974',
-                    node: document.getElementById('collection-component-1739210069296'),
+                    id: '668685795702',
+                    node: document.getElementById('collection-component-1739295327198'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
               "product": {
