--- a/they-lie-news2.html
+++ b/they-lie-news2.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Forg3t</title>
+    <title>4bidden Prod They Lie News Network 2.0</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -227,23 +227,25 @@
                     <div class="left-images">
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1 FORG3T SMALL.webp" alt="Left Image 1" />
+                                <img src="images/12 TLNN 2.0 SMALL.webp" alt="Left Image 1" />
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1.2 FORG3T LOGO BLACK small.webp" alt="Left Image 2" />
+                                <img src="images/4biddenprod logo black SMALL SMALL.webp" alt="Left Image 2" />
                             </a>
                         </span>
                     </div>
                     <div class="right-text">
                         <h3>FORG3T</h3>
-                        <h2>They said 'Never Forget' for two towers but hope you forget the third—WTC7. Start asking. Start with Building 7.</h2>
+                        <h2>"TLNN 2.0 (They Lie News Network)" captures the unsettling realization that what we see isn't always the truth. This design isn't just about images; it's about the deeper story behind those images—the narrative controls and the hidden hands that shape our perceptions.
+
+                          With a nod to the timeless messages of 'They Live', this piece challenges you to look closer.</h2>
                     </div>
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div class="products-container"><div id='collection-component-1739210069296'></div>
+            <div class="products-container"><div id='collection-component-1739295013667'></div>
             <script type="text/javascript">
             /*<![CDATA[*/
             (function () {
@@ -271,8 +273,8 @@
                 });
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('collection', {
-                    id: '668686745974',
-                    node: document.getElementById('collection-component-1739210069296'),
+                    id: '668685730166',
+                    node: document.getElementById('collection-component-1739295013667'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
               "product": {
