--- a/turn-off-vision.html
+++ b/turn-off-vision.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Forg3t</title>
+    <title>4bidden Prod Turn Off the They-lie-vision</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -227,23 +227,23 @@
                     <div class="left-images">
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1 FORG3T SMALL.webp" alt="Left Image 1" />
+                                <img src="images/3 TURN OFF THE THEY-LIE-VISION SMALL.webp" alt="Left Image 1" />
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1.2 FORG3T LOGO BLACK small.webp" alt="Left Image 2" />
+                                <img src="images/4biddenprod logo black SMALL SMALL.webp" alt="Left Image 2" />
                             </a>
                         </span>
                     </div>
                     <div class="right-text">
-                        <h3>FORG3T</h3>
-                        <h2>They said 'Never Forget' for two towers but hope you forget the third—WTC7. Start asking. Start with Building 7.</h2>
+                        <h3>Turn of the they-lie-vision</h3>
+                        <h2>JUST TURN IT OFF</h2>
                     </div>
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div class="products-container"><div id='collection-component-1739210069296'></div>
+            <div class="products-container"><div id='collection-component-1739293678805'></div>
             <script type="text/javascript">
             /*<![CDATA[*/
             (function () {
@@ -271,8 +271,8 @@
                 });
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('collection', {
-                    id: '668686745974',
-                    node: document.getElementById('collection-component-1739210069296'),
+                    id: '668685992310',
+                    node: document.getElementById('collection-component-1739293678805'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
               "product": {
