--- a/you-are-here.html
+++ b/you-are-here.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Forg3t</title>
+    <title>4bidden Prod You Are Here</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -227,23 +227,25 @@
                     <div class="left-images">
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1 FORG3T SMALL.webp" alt="Left Image 1" />
+                                <img src="images/10 YOU ARE HERE SMALL.webp" alt="Left Image 1" />
                             </a>
                         </span>
                         <span class="image fit">
                             <a href="#">
-                                <img src="images/1.2 FORG3T LOGO BLACK small.webp" alt="Left Image 2" />
+                                <img src="images/10.1 YOU ARE HERE LOGO SMALL.webp" alt="Left Image 2" />
                             </a>
                         </span>
                     </div>
                     <div class="right-text">
-                        <h3>FORG3T</h3>
-                        <h2>They said 'Never Forget' for two towers but hope you forget the third—WTC7. Start asking. Start with Building 7.</h2>
+                        <h3>You Are Here</h3>
+                        <h2>Step into the chilling reality of "You Are Here," a design inspired by the dystopian visions of 1984, Animal Farm, Brave New World, The Matrix and more. This bold graphic serves not just as a nod to these seminal works but as a stark reminder that their themes of control, decay, and lost individuality are alarmingly relevant today.
+
+                          Wear this piece as a wake-up call and a recommendation—dive into these stories, see the parallels, and understand the warning they carry. It's more than just apparel; it's an invitation to think critically about the world around you.</h2>
                     </div>
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div class="products-container"><div id='collection-component-1739210069296'></div>
+            <div class="products-container"><div id='collection-component-1739293198487'></div>
             <script type="text/javascript">
             /*<![CDATA[*/
             (function () {
@@ -271,8 +273,8 @@
                 });
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('collection', {
-                    id: '668686745974',
-                    node: document.getElementById('collection-component-1739210069296'),
+                    id: '668685664630',
+                    node: document.getElementById('collection-component-1739293198487'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
               "product": {
