--- a/they-lie-news2.html
+++ b/they-lie-news2.html
@@ -237,8 +237,8 @@
                         </span>
                     </div>
                     <div class="right-text">
-                        <h3>FORG3T</h3>
-                        <h2>"TLNN 2.0 (They Lie News Network)" captures the unsettling realization that what we see isn't always the truth. This design isn't just about images; it's about the deeper story behind those images—the narrative controls and the hidden hands that shape our perceptions.
+                        <h3>TLNN 2.0 (They Lie News Network)</h3>
+                        <h2>aptures the unsettling realization that what we see isn't always the truth. This design isn't just about images; it's about the deeper story behind those images—the narrative controls and the hidden hands that shape our perceptions.
 
                           With a nod to the timeless messages of 'They Live', this piece challenges you to look closer.</h2>
                     </div>
