--- a/size-guide.html
+++ b/size-guide.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Forg3t</title>
+    <title>4bidden Prod Size Guide</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
