--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod About Us</title>
+    <title>4biddentruth Website</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -29,7 +29,7 @@
   <body class="is-preload">
     <!-- Promo Banner -->
     <div id="promo-banner">
-      <p>🎉 Free delivery on orders over $100! 🎉</p>
+      <p>🎉 This website is under construction! 🎉</p>
     </div>
     <!-- Wrapper -->
     <div id="wrapper">
