--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body class="is-preload">
     <!-- Promo Banner -->
     <div id="promo-banner">
-      <p>🎉 This website is under construction! 🎉</p>
+      <p>🎉 This website is under construction right now! 🎉</p>
     </div>
     <!-- Wrapper -->
     <div id="wrapper">
