--- a/src/index.template.html
+++ b/src/index.template.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4biddenwellness</title>
+    <title>4biddenwellness workinprogress</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -20,7 +20,7 @@
   <body class="is-preload">
     <!-- Promo Banner -->
     <div id="promo-banner">
-      <p>🎉 4biddenwellness work in progress! 🎉</p>
+      <p>🎉 4biddenwellness work in progress right now! 🎉</p>
     </div>
     <!-- Wrapper -->
     <div id="wrapper">
