--- a/src/index.template.html
+++ b/src/index.template.html
@@ -30,7 +30,7 @@
           <!-- Logo -->
           <a href="index.html" class="logo">
             <span class="symbol">
-              <img src="images/logo1.svg" alt="4biddenWellness" />
+              <img src="images/new-logo.png" alt="4biddenWellness" />
             </span>
           </a>
 
