--- a/src/menu.html
+++ b/src/menu.html
@@ -7,7 +7,7 @@
         <h2>Menu</h2>
         <ul>
             <li><a href="about-us.html">About Us</a></li>
-            <li><a href="#" class="submenu-trigger" data-target="submenu-clothes">4bidden Clothes</a></li>
+            <li><a href="#" class="submenu-trigger" data-target="submenu-clothes">4bidden wellness</a></li>
             <li><a href="new-arrivals.html">New Arrivals</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="#" class="submenu-trigger" data-target="submenu-projects">4bidden Projects</a></li>
@@ -17,16 +17,16 @@
         <!-- 4bidden Projects Submenu -->
         <ul id="submenu-projects" class="submenu">
             <li><button class="back-button" data-target="menu">Back</button></li>
-            <li><a href="#" class="submenu-trigger" data-target="submenu-clothes">4BIDDEN CLOTHES</a></li>
+            <li><a href="#" class="submenu-trigger" data-target="submenu-clothes">4BIDDEN WELLNESS</a></li>
             <li><a href="enlighten.html">4BIDDEN TRUTH</a></li>
             <li><a href="entertainment.html">4BIDDEN FILMS</a></li>
-            <li><a href="home.html">4BIDDEN WELLNESS</a></li>
+            <li><a href="home.html">4BIDDEN CLOTHES</a></li>
             <li><a href="voice.html">4BIDDEN FREQUENCY </a></li>
             <li><a href="projects.html">4MORE</a></li>
             
         </ul>
 
-        <!-- 4biddenClothes Submenu -->
+        <!-- 4biddenWellness Submenu -->
         <ul id="submenu-clothes" class="submenu">
             <li><button class="back-button" data-target="menu">Back</button></li>
             <li><a href="#" class="submenu-trigger" data-target="subsubmenu-t-shirts">T-Shirts</a></li>
