--- a/src/shop-page-example.template.html
+++ b/src/shop-page-example.template.html
@@ -68,7 +68,7 @@
                     </span>
                 
                     <div class="right-text">
-                        <h3>Sweatshirts</h3>
+                        <h3>shop page example</h3>
                         <h2></div>
                 </div>
             </section>
