--- a/src/menu.html
+++ b/src/menu.html
@@ -35,7 +35,7 @@
             <li><a href="sweatshirts.html">EMF & Light Defense Gear</a></li>
             <li><a href="sweatshirts.html">Grounding & Earthing Essentials</a></li>
             <li><a href="sweatshirts.html">Ancestral Skincare & Body Rituals</a></li>
-            <li><a href="sweatshirts.html">copy for try Ancestral Skincare & Body Rituals</a></li>
+            <li><a href="shop-page-example.html">copy for try Ancestral Skincare & Body Rituals</a></li>
             <li><a href="#" class="submenu-trigger" data-target="subsubmenu-t-shirts">temporary submenu trigger</a></li>
             
         </ul>
