--- a/frequency-tools.html
+++ b/frequency-tools.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Collection 4biddenProd</title>
+    <title>4bidden Wellness Frequency Tools</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -222,12 +222,12 @@
                     </span>
                 
                     <div class="right-text">
-                        <h3>Collection 4biddenProd</h3>
-                    </div>
+                        <h3>100% Cotton</h3>
+                        <h2></div>
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div class="products-container"><div id='collection-component-1739298699200'></div>
+            <div class="products-container"><div id='collection-component-1739297812264'></div>
             <script type="text/javascript">
             /*<![CDATA[*/
             (function () {
@@ -255,8 +255,8 @@
                 });
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('collection', {
-                    id: '668685468022',
-                    node: document.getElementById('collection-component-1739298699200'),
+                    id: '668693397878',
+                    node: document.getElementById('collection-component-1739297812264'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
               "product": {
