--- a/src/frequency-tools.template.html
+++ b/src/frequency-tools.template.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Backprint T-Shirts</title>
+    <title>4bidden Wellness Frequency Tools</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -43,7 +43,9 @@
         </div>
       </header>
         
-        <!-- Main Menu Placeholder -->
+
+
+      <!-- Main Menu Placeholder -->
 <%= mainMenu %>
 
       <div class="divider"></div>
@@ -70,12 +72,12 @@
                     </span>
                 
                     <div class="right-text">
-                        <h3>Backprint T-Shirts</h3>
+                        <h3>Frequency Tools & Resonance Devices	</h3>
                         <h2></div>
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div class="products-container"><div id='collection-component-1739297887833'></div>
+            <div class="products-container"><div id='collection-component-1739297812264'></div>
             <script type="text/javascript">
             /*<![CDATA[*/
             (function () {
@@ -103,8 +105,8 @@
                 });
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('collection', {
-                    id: '668683207030',
-                    node: document.getElementById('collection-component-1739297887833'),
+                    id: '668693397878',
+                    node: document.getElementById('collection-component-1739297812264'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
               "product": {
