--- a/src/grounding.template.html
+++ b/src/grounding.template.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod Bluebeam IQ Test</title>
+    <title>4bidden Wellness Grounding</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -86,7 +86,7 @@
                         </span>
                     </div>
                     <div class="right-text">
-                        <h3>Bluebeam IQ Test</h3>
+                        <h3>Grounding & Earthing Essentials	</h3>
                         <h2>Challenge your perceptions with the "Bluebeam IQ Test" design, a pivotal piece from our Hive Mind Chronicles collection. This design cleverly satirizes the potential for mass deception, drawing inspiration from the infamous Project Bluebeam conspiracy theory, which suggests staged alien invasions as a test of public gullibility.</h2>
                     </div>
                 </div>
