--- a/src/emf-defence.template.html
+++ b/src/emf-defence.template.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>4bidden Prod 100% Cotton</title>
+    <title>4bidden Prod Collection 4biddenProd</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -44,7 +44,6 @@
       </header>
         
 
-
       <!-- Main Menu Placeholder -->
 <%= mainMenu %>
 
@@ -55,7 +54,7 @@
           <!-- Main -->
           <div id="main">
             <div class="inner">
-                  <!-- Second Menu Placeholder -->
+                 <!-- Second Menu Placeholder -->
 <%= secondMenu %>
 
 
@@ -72,12 +71,12 @@
                     </span>
                 
                     <div class="right-text">
-                        <h3>100% Cotton</h3>
-                        <h2></div>
+                        <h3>EMF & Light Defense Gear	</h3>
+                    </div>
                 </div>
             </section>
             <div class="shop-divider"></div>
-            <div class="products-container"><div id='collection-component-1739297812264'></div>
+            <div class="products-container"><div id='collection-component-1739298699200'></div>
             <script type="text/javascript">
             /*<![CDATA[*/
             (function () {
@@ -105,8 +104,8 @@
                 });
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('collection', {
-                    id: '668693397878',
-                    node: document.getElementById('collection-component-1739297812264'),
+                    id: '668685468022',
+                    node: document.getElementById('collection-component-1739298699200'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
               "product": {
