--- a/src/index.template.html
+++ b/src/index.template.html
@@ -186,7 +186,7 @@
     <div class="harmonized-container">
       <!-- Featured Section -->
       <div class="featured-section" style="display: flex; justify-content: space-between; align-items: center;">
-        <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #ffffff;">Featured Designs</h2>
+        <h2 class="featured-title" style="margin: 0; font-size: 24px; color: #ffffff;">Featured Products</h2>
         <button class="view-all-button" onclick="location.href='all-designs.html'" style="background-color: #0066d3; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s ease;">View All Designs</button>
       </div>
 
@@ -194,7 +194,7 @@
   <section class="tiles" style="display: flex; flex-wrap: wrap; gap: 20px; margin-top: 20px;">
     <article class="style1">
       <span class="image">
-        <img src="images/1 FORG3T SMALL.webp" alt="" />
+        <img src="images/p1.webp" alt="" />
       </span>
       <a href="forg3t.html">
         <h2></h2>
@@ -205,7 +205,7 @@
     </article>
     <article class="style2">
       <span class="image">
-        <img src="images/1.1 FORG3T LOGO SMALL.webp" alt="" />
+        <img src="images/p2.webp" alt="" />
       </span>
       <a href="forg3t.html">
         <h2></h2>
@@ -216,7 +216,7 @@
     </article>
     <article class="style3">
       <span class="image">
-        <img src="images/2 HIS-STORY SMALL.webp" alt="" />
+        <img src="images/p3.webp" alt="" />
       </span>
       <a href="his-story.html">
         <h2></h2>
@@ -227,7 +227,7 @@
     </article>
     <article class="style4">
       <span class="image">
-        <img src="images/2.1 HIS-STORY LOGO SMALL.webp" alt="" />
+        <img src="images/p4.webp" alt="" />
       </span>
       <a href="his-story.html">
         <h2></h2>
@@ -238,7 +238,7 @@
     </article>
     <article class="style5">
       <span class="image">
-        <img src="images/5 INDOCTRINATION SMALL.webp" alt="" />
+        <img src="images/p5.webp" alt="" />
       </span>
       <a href="indoctrination.html">
         <h2></h2>
@@ -249,7 +249,7 @@
     </article>
     <article class="style6">
       <span class="image">
-        <img src="images/5 INDOCTRINATION LOGO SMALL.webp" alt="" />
+        <img src="images/p6.webp" alt="" />
       </span>
       <a href="indoctrination.html">
         <h2></h2>
