--- a/src/index.template.html
+++ b/src/index.template.html
@@ -260,7 +260,7 @@
     </article>
     <article class="style2">
       <span class="image">
-        <img src="images/6 PROPAGANDA SMALL.webp" alt="" />
+        <img src="images/p7.webp" alt="" />
       </span>
       <a href="propaganda-missile.html">
         <h2></h2>
@@ -271,7 +271,7 @@
     </article>
     <article class="style3">
       <span class="image">
-        <img src="images/6.1 PROPAGANDA LOGO SMALL.webp" alt="" />
+        <img src="images/p8.webp" alt="" />
       </span>
       <a href="propaganda-missile.html">
         <h2></h2>
@@ -282,7 +282,7 @@
     </article>
     <article class="style1">
       <span class="image">
-        <img src="images/4BIDDENPROD NADA SMALL.webp" alt="" />
+        <img src="images/p9.webp" alt="" />
       </span>
       <a href="design-4biddenprod-nada.html">
         <h2></h2>
@@ -293,7 +293,7 @@
     </article>
     <article class="style5">
       <span class="image">
-        <img src="images/4BIDDENPROD NADA LOGO SMALL.webp" alt="" />
+        <img src="images/p10.webp" alt="" />
       </span>
       <a href="design-4biddenprod-nada.html">
         <h2></h2>
@@ -304,7 +304,7 @@
     </article>
     <article class="style6">
       <span class="image">
-        <img src="images/11 THEY-LIE-VISION SMALL.webp" alt="" />
+        <img src="images/p11.webp" alt="" />
       </span>
       <a href="they-lie-vision.html">
         <h2></h2>
@@ -315,7 +315,7 @@
     </article>
     <article class="style4">
       <span class="image">
-        <img src="images/4biddenprod logo black SMALL SMALL.webp" alt="" />
+        <img src="images/p12.webp" alt="" />
       </span>
       <a href="they-lie-vision.html">
         <h2></h2>
