--- a/src/index.template.html
+++ b/src/index.template.html
@@ -111,57 +111,57 @@
                                 <img src="images/6.webp" alt="New Arrivals Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">137 products</span>
+                                    <span class="cslider-products">12 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 2 -->
                         <div class="cslider-slide">
-                            <a href="mens-classics.html">
-                                <img src="images/7.webp" alt="Men's Classic Collection">
+                            <a href="skincare-rituals.html">
+                                <img src="images/7.webp" alt="Ancestral Skincare & Body Rituals Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">51 products</span>
+                                    <span class="cslider-products">2 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 3 -->
                         <div class="cslider-slide">
-                            <a href="womens-tshirts.html">
-                                <img src="images/8.webp" alt="Women's T-Shirts Collection">
+                            <a href="grounding.html">
+                                <img src="images/8.webp" alt="Grounding & Earthing Essentials Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">22 products</span>
+                                    <span class="cslider-products">3 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 4 -->
                         <div class="cslider-slide">
-                            <a href="backprint-tshirts.html">
-                                <img src="images/11.webp" alt="Backprint T-Shirts Collection">
+                            <a href="energy-fuel.html">
+                                <img src="images/11.webp" alt="Sovereign Energy & Inner Fuel Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">13 products</span>
+                                    <span class="cslider-products">1 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 5 -->
                         <div class="cslider-slide">
-                            <a href="pullover-hoodies.html">
-                                <img src="images/9.webp" alt="Pullover Hoodies Collection">
+                            <a href="emf-defence.html">
+                                <img src="images/9.webp" alt="EMF & Light Defense Gear Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">35 products</span>
+                                    <span class="cslider-products">4 products</span>
                                 </div>
                             </a>
                         </div>
                         <!-- Slide 6 -->
                         <div class="cslider-slide">
-                            <a href="cropped-hoodies.html">
-                                <img src="images/10.webp" alt="Cropped Hoodies Collection">
+                            <a href="frequency-tools.html">
+                                <img src="images/10.webp" alt="Frequency Tools & Resonance Devices Collection">
                                 <div class="cslider-hover-text" aria-hidden="true">
                                     <span class="cslider-view">VIEW</span>
-                                    <span class="cslider-products">12 products</span>
+                                    <span class="cslider-products">5 products</span>
                                 </div>
                             </a>
                         </div>
